# f1datastop

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: f1datastop-docker-wf.yml
apps/formula1/: config.py  ergastdatamapper.py  fastf1_task.py
apps/formula1/admin/: __init__.py  abstract.py  base.py  inlines.py  race.py  result.py
apps/formula1/documents/: __init__.py  abstract.py  base.py  fields.py  race.py  result.py
apps/formula1/migrations/: 0001_initial.py
apps/formula1/models/: __init__.py  base.py  race.py  result.py
apps/formula1/updates/: __init__.py  ergastdataupdate.py
apps/home/: config.py
apps/templates/home/: billing.html  index.html
core/: settings.py  urls.py
docker/: docker-compose.services.yml
scripts/: entrypoint.sh  local_migrate.sh  poetry_export.sh
