[tool.poetry]
name = "f1datastop"
version = "0.1.0"
description = "F1 DatsStop is a Django based project bulit using Ergast Database for F1."
authors = ["Ibrahim Roshdy <ibrahimabdelrahman@aucegypt.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.15"
django-elasticsearch-dsl = "7.3"
django-elasticsearch-dsl-drf = "0.22.5"
gunicorn = "20.1.0"
mysqlclient = "2.1.1"
whitenoise = "5.3.0"
zipp = "3.14.0"
websockets = "10.4"
fastf1 = "2.3.0"
dj-database-url = "0.5.0"
ergast-py = "0.7.0"
pycodestyle = "2.8.0"
toml = "0.10.2"
django-import-export = "2.9.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
